--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
 
     steps:
       -name: Checkout code
-       uses: action/checkout@v4
-
+       uses: actions/checkout@v4
+       
       -name: Run a simple command
        run: echo"Hello, Github Action"
 
